--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,11 +54,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+    FILES
+    mover.srv
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -68,9 +67,8 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
+#generate_messages(
+#   CATKIN_DEPENDS std_msgs
 # )
 
 ################################################
