--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,10 +54,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-    FILES
-    mover.srv
- )
+#add_service_files(
+#    FILES
+#    mover.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
